--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,9 +35,11 @@ header{
   border-radius: 4px;
   white-space: nowrap;
 
+  font-family: CubicPixel;
   color: white;
   display: flex;
   align-items: center;
+  font-size: 20px;
 }
 
 .wallet{
