--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,14 @@
 #root{
   overflow-y: hidden;
 }
+@media screen and (max-height: 900px) {
+  .Main {
+    overflow: auto;
+  }
+  #root{
+    overflow-y: auto;
+  }
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
